<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxPreferencesFragment"
        app:key="termux"
        app:summary="@string/termux_preferences_summary"
        app:title="@string/termux_preferences_title" />

    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxTaskerPreferencesFragment"
        app:isPreferenceVisible="false"
        app:key="termux_tasker"
        app:summary="@string/termux_tasker_preferences_summary"
        app:title="@string/termux_tasker_preferences_title" />

    <Preference
        app:key="about"
        app:persistent="false"
        app:title="@string/about_preference_title" />
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:isPreferenceVisible="false"
        app:key="donate"
        app:persistent="false"
        app:title="@string/donate_preference_title" />

</PreferenceScreen>
